# rs-ws-example

./: Cargo.toml
assets/: index.html  script.js
src/: main.rs
